--- a/src/css/home.css
+++ b/src/css/home.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .search-form label
@@ -69,8 +69,8 @@
     align-items: flex-start;
     justify-items: center;
     justify-content: center;
-    padding: 0.5rem;
     gap: 1rem;
+    padding: 0 2rem;
     grid-template-columns: repeat(auto-fit, minmax(max-content, 320px));
 }
 
